Use generation to determine initial configuration